# resinf

./: .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README.md  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/workflows/: release.yml
docs/: index.rst
docs/releases/: releases.rst
refinf/: __init__.py
resinf/: __init__.py  configure.py  hard.py  path.py
tests/: __init__.py  conftest.py
